# clang

./: .gitignore  README.md  prompt.md
projects/3/lib/: Process.c  Process.h
projects/3/src/: main.c
projects/data/pattenpics/: car2b.pgm  car3b.pgm
projects/data/pics/: car1b.pgm  car4b.pgm  car5b.pgm  image1.pbm  image1.ppm
projects/output/pics/: car1.pgm  car1b.pgm  car2.pgm  car2b.pgm  car3.pgm  car3b.pgm  car4.pgm  car4b.pgm  car5.pgm  car5b.pgm  carte.pgm  fruits.pgm  fruitsn.pgm  image1.pbm  image1.pgm  image1.ppm  image2.pgm  image3.pgm  image4.pgm  image5.pgm
projects/pattern/: CMakeLists.txt
projects/pattern/lib/: Interface.c  Interface.h  Process.c  Process.h
projects/pattern/src/: 10.md  11.md  2.c  2.md  4.md  5.md  6.md  7.md  8.md  9.md  hama1.md  hama2.md  mail.html  mail.md  main  main.c  two
projects/test/: CMakeLists.txt  dev.md  setup.md
projects/test/docs/: temp.md
projects/test/lib/: Clock.c  Clock.h  KeyListener.c  KeyListener.h  Window.c  Window.h  console.c  console.h  key  layer.c  layer.h
projects/test/src/: CUI  console  console.c  console.h  fib.c  main.c
projects/test/test/: KeyListenerTest.c
